--- a/src/dom06-final.html
+++ b/src/dom06-final.html
@@ -16,46 +16,51 @@
     <script type="module" src="./js/dom06-final.js"></script>
   </head>
   <body>
-    <secion class="app-cmp-section">
-      <div>
-        <button
-          type="button"
-          class="app-cmd-add-input app-cl-cmd app-cl-primary"
-        >
-          <i class="material-symbols-outlined">add</i>
-          Add
-        </button>
-      </div>
+    <main class="app-cmp-main">
+      <secion class="app-cmp-section">
+        <div>
+          <button
+            type="button"
+            class="app-cmd-add-input app-cl-cmd app-cl-primary"
+          >
+            <i class="material-symbols-outlined">add</i>
+            Add
+          </button>
+        </div>
 
-      <div class="app-cmp-inputs-list">
-        <template class="app-tmpl-input">
-          <div class="app-cmp-input">
-            <label>
-              <b class="app-elem-title"
-                >Number <span class="app-elem-title-no app-cl-number"></span
-              ></b>
-              <input
-                type="number"
-                value="0"
-                class="app-elem-input app-cl-number"
-              />
-            </label>
-            <button
-              type="button"
-              class="app-cmd-remove-input app-cl-cmd app-cl-warn"
-            >
-              <i class="material-symbols-outlined">delete_forever</i>
-            </button>
-          </div>
-        </template>
-      </div>
+        <div class="app-cmp-inputs-list">
+          <template class="app-tmpl-input">
+            <div class="app-cmp-input">
+              <label>
+                <b class="app-elem-title"
+                  >Number <span class="app-elem-title-no app-cl-number"></span
+                ></b>
+                <input
+                  type="number"
+                  value="0"
+                  class="app-elem-input app-cl-number"
+                />
+              </label>
+              <button
+                type="button"
+                class="app-cmd-remove-input app-cl-cmd app-cl-warn"
+              >
+                <i class="material-symbols-outlined">delete_forever</i>
+              </button>
+            </div>
+          </template>
+        </div>
 
-      <div class="app-cmp-input">
-        <label>
-          <b class="app-elem-title">Result</b>
-          <output class="app-elem-result app-cl-number">0</output>
-        </label>
-      </div>
-    </secion>
+        <div class="app-cmp-input">
+          <label>
+            <b class="app-elem-title">Result</b>
+            <output class="app-elem-result app-cl-number">0</output>
+          </label>
+          <button type="button" hidden class="app-cl-cmd app-cl-warn">
+            <i class="material-symbols-outlined">delete_forever</i>
+          </button>
+        </div>
+      </secion>
+    </main>
   </body>
 </html>
